--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "web-worker-example",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "build": "pnpm -r build",
     "preview": "pnpm -r preview"
@@ -14,5 +13,9 @@
     "@types/node": "^20.11.6",
     "typescript": "^5.3.3",
     "vite": "^5.0.12"
+  },
+  "engines": {
+    "pnpm": ">=8",
+    "node": ">=16"
   }
 }
